172 ==> 240139 - If I press Cancel while attempting to Drag and drop of a file, the file is deleted from its original directory.
173 ==> 363650 - I18N_ARGUMENT_MISSING in export dialog image type selection widget.
174 ==> 359505 - Image deleted after applying tag.
175 ==> 179898 - Dark theme: font in properties tab too dark.
176 ==> 240148 - If I change the theme to black, the color of the texts in menus remains black, and it can't be read.
177 ==> 265554 - Problem in colors between dgikam's theme and Gnome appearance.
178 ==> 168669 - Disabled entry menu seems more important and active in dark theme.
179 ==> 220068 - Dark theme: active item in menu is hardly different than others items
180 ==> 241116 - [Themes] Cannot change text colour in menu bar.
181 ==> 146938 - Themes Don't Apply To All Panels.
182 ==> 252700 - Font color for icons in toolbar does not change for darker Themes.
183 ==> 172632 - Album item tooltip doesn't use colors of themes properly.
184 ==> 257031 - SCAN : rename folder outside of digikam, F5 and it's gone.
185 ==> 294346 - Bug reporter borked - multibug.
186 ==> 237246 - Erratic TIFF thumbnail generation, some crashes.
187 ==> 328991 - Crash on install when trying asked to add album.
188 ==> 327794 - Crashing when adding collections.
189 ==> 308956 - Failed to load image preview on all but tiny images.
190 ==> 330779 - digiKam crashed while finding new items.
191 ==> 238510 - Crash when adding images to album.
192 ==> 363638 - bootstrap does not detect libgphoto2.
193 ==> 363510 - Wrong filename shown in album view.
194 ==> 322464 - Change default window size.
195 ==> 266781 - FACTORING : allow to use Import/Export tool dialogs on small screen.
196 ==> 363887 - Mouse hover notifications are yellow background with white font, completely unreadable. Can not find option to configure this.
197 ==> 363939 - digiKam crashes when going to full screen.
198 ==> 364009 - Cannot use batch processing to resize images.
199 ==> 